--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p {
     width: 30%;
     padding: 20px;
     margin: 20px 0;
-    background-color: #E3D5CA;
+    background-image: url('assets/images/game.jpg');
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
