--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     background-color: #ffffff; /* Add a default background color for the entire page */
     background-image: url('assets/background.jpg');
     background-size: cover;
