--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,12 @@ p {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+.service-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 h2 {
     font-size: 24px;
     margin-bottom: 10px;
@@ -117,7 +122,7 @@ h5 {
 .contact {
     background-color: #F3C1BC;
     color: #403d39; /* Updated text color */
-    padding: 50px;
+    
     text-align: center;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -151,21 +156,33 @@ background-color: #883F39;
 /* Basic styling for the footer */
 footer {
     background-color: #ffffff;
-    padding: 30px;
+    
     text-align: center;
     color: #403d39;
     font-weight: normal;
     justify-content: space-between;
 }
 
+.media-image {
+    max-width: 100%;
+  height: auto;
+}
+.small-image {
+    /* Additional styles for making the images smaller */
+    width: 50px; /* You can adjust the width to your preference */
+    height: auto; /* Maintain aspect ratio */
+  }
+
+
 /* Style for each section in the footer */
 .contact2,
 .address-media,
 .newsletter {
     display: inline-block;
-    padding: 40px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin-top: -30px;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 10px;
     vertical-align: top;
     text-align: center; /* Align text to the left */
 }
@@ -203,7 +220,24 @@ footer {
   margin-bottom: 10px;
 }
 
-
+/*contact page */
+#contactForm {
+    /* Your styles go here */
+    max-width: 600px;
+    margin: auto;
+    margin-bottom: 90px;
+    background-color: #F3C1BC;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+ input, select, textarea {
+    width: 100%;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #883F39;
+    border-radius: 4px;
+}
 /* Responsive styles - adjust as needed */
 @media (max-width: 768px) {
   /* Stack sections on smaller screens */
