--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,14 +142,17 @@ h5 {
     font-weight: normal;
 }
 .contact {
-    background-color: #F3C1BC;
-    color: #403d39; /* Updated text color */
+    background-color: #883F39;
+    color: #fff; /* Updated text color */
     
     text-align: center;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.contact h2 {
+    color: #fff;
+}
 form {
     max-width: 400px;
     margin: 0 auto;
