--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,13 @@ main {
     padding-bottom: 90px;
     background-color: rgba(255, 255, 255, 0.8); /* Add a background color to cover the background image */
 }
-
+.aboutme1 {
+    padding-top: 0px;
+}
+.aboutme2 {
+    padding: 35px;
+    text-align: left;
+}
 #myImage {
     position: relative;
     width: 100%;
