updates smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@ main {
     width: 100%;
     top: 30%;
     object-fit: cover;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
     opacity: 0.25;
   
@@ -302,6 +301,12 @@ footer {
     }
     .landing {
         top: 40%;
+        
+    }
+   p {
+            font-size: 0.8em; }
+    h2 {
+        font-size: smaller;
     }
 }
 
