--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,9 @@ main {
     transform: translate(-50%, -50%);
     width: 80%; /* Adjust the width as needed */
 }
+.cheatsheet {
+    text-align: left;
+}
 section {
     display: flex;
     flex-direction: column;
