--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,71 @@ main {
 .cheatsheet {
     text-align: left;
 }
+
+
+
+
+#find-out-more-btn {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+#gallery-container {
+    overflow: hidden;
+}
+
+#rotator-container {
+    display: flex;
+    align-items: center;
+}
+
+#rotator-prev,
+#rotator,
+#rotator-next {
+    width: 300px; /* Set the width according to your preference */
+    height: auto;
+    border-radius: 0.5;
+}
+.image-wrapper {
+    flex: 0 0 auto;
+    background-color: #F3C1BC;
+    color: #403d39;
+    padding: 20px;
+    margin: 20px ;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#image-text-prev,
+#image-text,
+#image-text-next {
+    position: absolute;
+    color: #403d39;
+    padding: 7px;
+    margin: 10px;
+    width: 100%;
+    max-width: 300px;
+
+}
+
+
+
+#prev-button,
+#next-button {
+    margin-top: 250px;
+    margin: 50px;
+}
+
+
+
 section {
     display: flex;
     flex-direction: column;
@@ -110,34 +175,6 @@ p {
     margin-bottom: 40px;
 }
 
-.services {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 50px;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    margin: 40px 0;
-}
-
-
-.service-box {
-    width: 30%;
-    background-color: #F3C1BC;
-    color: #403d39;
-    padding: 20px;
-    margin: 20px 0;
-    background-image: url('assets/images/game.jpg');
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-.service-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
 h2 {
     font-size: 24px;
     margin-bottom: 10px;
