--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,68 +90,63 @@ main {
 }
 
 
-
-
-#find-out-more-btn {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
 #gallery-container {
     overflow: hidden;
 }
 
 #rotator-container {
     display: flex;
-    align-items: center;
+    justify-content: space-between; /* Add this line to space out the images */
+}
+
+.image-wrapper {
+    background-color: #F3C1BC;
+    color: #403d39;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 8px;
+    flex: 0 0 auto; /* Add this line to prevent images from growing */
+    position: relative;
+    width: fit-content;
+    max-width: 400px;
 }
 
 #rotator-prev,
 #rotator,
 #rotator-next {
-    width: 300px; /* Set the width according to your preference */
+    width: 300px; /* Use 100% width for responsiveness */
     height: auto;
-    border-radius: 0.5;
+    border-radius: 8px;
 }
-.image-wrapper {
-    flex: 0 0 auto;
+
+.text-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-color: #F3C1BC;
     color: #403d39;
-    padding: 20px;
-    margin: 20px ;
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 #image-text-prev,
 #image-text,
 #image-text-next {
-    position: absolute;
     color: #403d39;
     padding: 7px;
-    margin: 10px;
     width: 100%;
-    max-width: 300px;
-
+    text-align: left;
 }
+
 
 
 
 #prev-button,
 #next-button {
-    margin-top: 250px;
     margin: 50px;
 }
-
-
 
 section {
     display: flex;
