--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,27 @@ main {
     margin: 50px;
 }
 
+
+
+.testimonial-wrapper {
+    display: inline-block;
+    flex: 0 0 30%;
+    width: 300px;
+    background-color: #883F39;
+    color: #ffffff;
+    padding: 10px;
+    margin: 20px;
+}
+
+#prev-testimonial-button,
+#next-testimonial-button {
+    margin: 50px; /* Adjust this margin as needed */
+   
+}
+
+
+
+
 section {
     display: flex;
     flex-direction: column;
